[tool.poetry]
name = "hugsy-scheduler"
version = "0.1.0"
description = ""
authors = ["dev0Guy <97923827+dev0Guy@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numba = "^0.61.0"


[tool.poetry.group.dev.dependencies]
hypothesis = "^6.129.2"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
